// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Component loads the account page when clicked 1`] = `
<body>
  <div>
    <div
      class="App"
    >
      <nav
        class="Nav"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          aria-current="page"
          class="active"
          href="/user/1"
        >
          Account
        </a>
      </nav>
      <main
        class="UserPage"
      >
        <h1>
          User1
        </h1>
        <p>
          Email: 
          user1@gmail.com
        </p>
        <div
          class="PostsList"
        >
          <h1>
            Posts
          </h1>
          <ul>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/4"
              >
                Cooking Basics for Beginners
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 05 2021 08:28:28
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/2"
              >
                How to Save Money When Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 28 2020 18:24:43
              </p>
            </li>
          </ul>
        </div>
        <section
          class="UserCommentsList"
        >
          <h2>
            Comments
          </h2>
          <ul>
            <li
              class="Comment"
            >
              <a
                class="Comment__post-title"
                href="/blog-posts/1"
              >
                Lessons I Learned from Cooking
              </a>
              <p
                class="Comment__content"
              >
                These are all great lessons!
              </p>
              <p
                class="Comment__timestamp"
              >
                Last edited on 
                Dec 19 2020 07:37:16
              </p>
            </li>
            <li
              class="Comment"
            >
              <a
                class="Comment__post-title"
                href="/blog-posts/5"
              >
                Winter Seasoning Guide
              </a>
              <p
                class="Comment__content"
              >
                I can't wait to try these seasoning combinations in my next meal!
              </p>
              <p
                class="Comment__timestamp"
              >
                Last edited on 
                Dec 17 2020 08:37:52
              </p>
            </li>
          </ul>
        </section>
      </main>
    </div>
  </div>
</body>
`;

exports[`Nav Component loads the homepage when clicked 1`] = `
<body>
  <div>
    <div
      class="App"
    >
      <nav
        class="Nav"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
        <a
          href="/user/1"
        >
          Account
        </a>
      </nav>
      <main
        class="Home"
      >
        <h1>
          Welcome to the Cooking Blog!
        </h1>
        <p>
          Ever wanted to learn more about cooking, or share your experiences with others? Here you can read all kinds of posts from other users: things they've tried, things they want to try, recipes, cooking tips, etc. And if you create an account you can make posts of your own, and leave comments on posts.
        </p>
        <div
          class="PostsList"
        >
          <h1>
            Posts
          </h1>
          <ul>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/8"
              >
                Title8
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 06 2021 12:22:39
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/6"
              >
                Title6
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 05 2021 14:22:39
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/4"
              >
                Cooking Basics for Beginners
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 05 2021 08:28:28
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/11"
              >
                Title11
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 04 2021 18:22:39
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/7"
              >
                Title7
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Jan 02 2021 16:22:39
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/2"
              >
                How to Save Money When Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 28 2020 18:24:43
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/1"
              >
                Lessons I Learned from Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 17 2020 07:37:16
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/10"
              >
                Title10
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 15 2020 19:22:39
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/5"
              >
                Winter Seasoning Guide
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 15 2020 11:56:48
              </p>
            </li>
            <li
              class="blog-post"
            >
              <a
                class="blog-title"
                href="/blog-posts/9"
              >
                Title9
              </a>
              <p
                class="timestamp"
              >
                Last edited on 
                Dec 15 2020 11:22:39
              </p>
            </li>
          </ul>
          <button
            class="page-button prev-posts"
            disabled=""
            type="button"
          >
            Previous
          </button>
          <button
            class="page-button"
            type="button"
          >
            Next
          </button>
        </div>
      </main>
    </div>
  </div>
</body>
`;
